deploy: 158bca2e49d2b1ca9fa7218530d0aea73c607d4e

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -39,6 +39,7 @@
 <li><a href="python2verilog/ir/statements.html">python2verilog.ir.statements</a></li>
 <li><a href="python2verilog/optimizer/optimizer.html">python2verilog.optimizer.optimizer</a></li>
 <li><a href="python2verilog/utils/assertions.html">python2verilog.utils.assertions</a></li>
+<li><a href="python2verilog/utils/decorator.html">python2verilog.utils.decorator</a></li>
 <li><a href="python2verilog/utils/generics.html">python2verilog.utils.generics</a></li>
 <li><a href="python2verilog/utils/string.html">python2verilog.utils.string</a></li>
 </ul>
