--- a/genindex.html
+++ b/genindex.html
@@ -129,6 +129,10 @@
         <li><a href="python2verilog.ir.html#python2verilog.ir.statements.CaseItem">(class in python2verilog.ir.statements)</a>
 </li>
       </ul></li>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.check_input_types">check_input_types() (Context method)</a>
+</li>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.check_output_types">check_output_types() (Context method)</a>
+</li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.BasicElement.child">child (BasicElement property)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.Element.children">children (Element property)</a>
@@ -155,6 +159,8 @@
 </li>
       <li><a href="python2verilog.api.html#python2verilog.api.api.convert_for_debug">convert_for_debug() (in module python2verilog.api.api)</a>
 </li>
+      <li><a href="python2verilog.api.html#python2verilog.api.api.convert_from_cli">convert_from_cli() (in module python2verilog.api.api)</a>
+</li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.create_cytoscape_elements">create_cytoscape_elements() (in module python2verilog.ir.graph)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.create_networkx_adjacency_list">create_networkx_adjacency_list() (in module python2verilog.ir.graph)</a>
@@ -171,10 +177,12 @@
         <li><a href="python2verilog.ir.html#python2verilog.ir.statements.Declaration">(class in python2verilog.ir.statements)</a>
 </li>
       </ul></li>
-      <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.Div">Div (class in python2verilog.ir.expressions)</a>
+      <li><a href="python2verilog.utils.html#python2verilog.utils.decorator.decorator_with_args">decorator_with_args() (in module python2verilog.utils.decorator)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.Div">Div (class in python2verilog.ir.expressions)</a>
+</li>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CaseBuilder.do_edge">do_edge() (CaseBuilder method)</a>
 </li>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CaseBuilder.do_vertex">do_vertex() (CaseBuilder method)</a>
@@ -269,11 +277,13 @@
 </li>
       <li><a href="python2verilog.utils.html#python2verilog.utils.string.Indent.indentify">indentify() (Indent method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python2verilog.utils.html#python2verilog.utils.string.Indent.indentor">indentor (Indent attribute)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Initial">Initial (class in python2verilog.backend.verilog.ast)</a>
+</li>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.input_types">input_types (Context attribute)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.input_vars">input_vars (Context property)</a>
 </li>
@@ -351,6 +361,8 @@
 </li>
         <li><a href="python2verilog.utils.html#module-python2verilog.utils.assertions">python2verilog.utils.assertions</a>
 </li>
+        <li><a href="python2verilog.utils.html#module-python2verilog.utils.decorator">python2verilog.utils.decorator</a>
+</li>
         <li><a href="python2verilog.utils.html#module-python2verilog.utils.generics">python2verilog.utils.generics</a>
 </li>
         <li><a href="python2verilog.utils.html#module-python2verilog.utils.string">python2verilog.utils.string</a>
@@ -361,6 +373,8 @@
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Module">Module (class in python2verilog.backend.verilog.ast)</a>
 </li>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.module">module (CodeGen property)</a>
+</li>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.module_file">module_file (Context attribute)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.Mul">Mul (class in python2verilog.ir.expressions)</a>
 </li>
@@ -380,10 +394,12 @@
 </li>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CaseBuilder.new_caseitem">new_caseitem() (CaseBuilder method)</a>
 </li>
-      <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.new_testbench">new_testbench() (CodeGen method)</a>
+      <li><a href="python2verilog.api.html#python2verilog.api.api.new_namespace">new_namespace() (in module python2verilog.api.api)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.new_testbench">new_testbench() (CodeGen method)</a>
+</li>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.new_testbench_lines">new_testbench_lines() (CodeGen method)</a>
 </li>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.new_testbench_str">new_testbench_str() (CodeGen method)</a>
@@ -406,11 +422,15 @@
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.IfElseNode.optimal_false_edge">optimal_false_edge (IfElseNode property)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.IfElseNode.optimal_true_edge">optimal_true_edge (IfElseNode property)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.optimization_level">optimization_level (Context attribute)</a>
+</li>
       <li><a href="python2verilog.optimizer.html#python2verilog.optimizer.optimizer.OptimizeGraph">OptimizeGraph (class in python2verilog.optimizer.optimizer)</a>
+</li>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.output_types">output_types (Context attribute)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.output_vars">output_vars (Context property)</a>
 </li>
@@ -427,6 +447,10 @@
       <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.Pow">Pow (class in python2verilog.ir.expressions)</a>
 </li>
       <li><a href="python2verilog.utils.html#python2verilog.utils.generics.pretty_dict">pretty_dict() (in module python2verilog.utils.generics)</a>
+</li>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.py_ast">py_ast (Context attribute)</a>
+</li>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.py_func">py_func (Context attribute)</a>
 </li>
       <li>
     python2verilog
@@ -557,6 +581,13 @@
 </li>
       </ul></li>
       <li>
+    python2verilog.utils.decorator
+
+      <ul>
+        <li><a href="python2verilog.utils.html#module-python2verilog.utils.decorator">module</a>
+</li>
+      </ul></li>
+      <li>
     python2verilog.utils.generics
 
       <ul>
@@ -635,6 +666,8 @@
       <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.Ternary">Ternary (class in python2verilog.ir.expressions)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.test_cases">test_cases (Context attribute)</a>
+</li>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.testbench_file">testbench_file (Context attribute)</a>
 </li>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Always.to_lines">to_lines() (Always method)</a>
 
@@ -718,11 +751,15 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.valid_signal">valid_signal (Context attribute)</a>
 </li>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.validate_preprocessing">validate_preprocessing() (Context method)</a>
+</li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.statements.ValidSubsitution">ValidSubsitution (class in python2verilog.ir.statements)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.Var">Var (class in python2verilog.ir.expressions)</a>
+</li>
+      <li><a href="python2verilog.api.html#python2verilog.api.api.verilogify">verilogify() (in module python2verilog.api.api)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.Vertex">Vertex (class in python2verilog.ir.graph)</a>
 </li>
@@ -733,6 +770,10 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.While">While (class in python2verilog.backend.verilog.ast)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.write">write (Context attribute)</a>
 </li>
   </ul></td>
 </tr></table>
