deploy: 7c0c2279ad02971be58d10e6142d37676d0df8d9

--- a/genindex.html
+++ b/genindex.html
@@ -153,13 +153,13 @@
 </li>
       <li><a href="python2verilog.frontend.html#python2verilog.frontend.generator2ir.Generator2Graph.context">context (Generator2Graph property)</a>
 </li>
-      <li><a href="python2verilog.api.html#python2verilog.api.api.convert">convert() (in module python2verilog.api.api)</a>
+      <li><a href="python2verilog.api.html#python2verilog.api.cli.convert">convert() (in module python2verilog.api.cli)</a>
 </li>
-      <li><a href="python2verilog.api.html#python2verilog.api.api.convert_file_to_file">convert_file_to_file() (in module python2verilog.api.api)</a>
+      <li><a href="python2verilog.api.html#python2verilog.api.cli.convert_file_to_file">convert_file_to_file() (in module python2verilog.api.cli)</a>
 </li>
-      <li><a href="python2verilog.api.html#python2verilog.api.api.convert_for_debug">convert_for_debug() (in module python2verilog.api.api)</a>
+      <li><a href="python2verilog.api.html#python2verilog.api.cli.convert_for_debug">convert_for_debug() (in module python2verilog.api.cli)</a>
 </li>
-      <li><a href="python2verilog.api.html#python2verilog.api.api.convert_from_cli">convert_from_cli() (in module python2verilog.api.api)</a>
+      <li><a href="python2verilog.api.html#python2verilog.api.cli.convert_from_cli">convert_from_cli() (in module python2verilog.api.cli)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.create_cytoscape_elements">create_cytoscape_elements() (in module python2verilog.ir.graph)</a>
 </li>
@@ -235,10 +235,14 @@
       </ul></li>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Statement.get_blocked_comment">get_blocked_comment() (Statement method)</a>
 </li>
-      <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Statement.get_inline_comment">get_inline_comment() (Statement method)</a>
+      <li><a href="python2verilog.utils.html#python2verilog.utils.env_vars.get_debug_mode">get_debug_mode() (in module python2verilog.utils.env_vars)</a>
+</li>
+      <li><a href="python2verilog.api.html#python2verilog.api.decorator.get_func_ast_from_func">get_func_ast_from_func() (in module python2verilog.api.decorator)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Statement.get_inline_comment">get_inline_comment() (Statement method)</a>
+</li>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.get_module_lines">get_module_lines() (CodeGen method)</a>
 </li>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.get_module_str">get_module_str() (CodeGen method)</a>
@@ -319,6 +323,8 @@
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="python2verilog.extern.html#python2verilog.extern.iverilog.make_iverilog_cmd">make_iverilog_cmd() (in module python2verilog.extern.iverilog)</a>
+</li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.Mod">Mod (class in python2verilog.ir.expressions)</a>
 </li>
       <li>
@@ -329,7 +335,9 @@
 </li>
         <li><a href="python2verilog.api.html#module-python2verilog.api">python2verilog.api</a>
 </li>
-        <li><a href="python2verilog.api.html#module-python2verilog.api.api">python2verilog.api.api</a>
+        <li><a href="python2verilog.api.html#module-python2verilog.api.cli">python2verilog.api.cli</a>
+</li>
+        <li><a href="python2verilog.api.html#module-python2verilog.api.decorator">python2verilog.api.decorator</a>
 </li>
         <li><a href="python2verilog.backend.html#module-python2verilog.backend">python2verilog.backend</a>
 </li>
@@ -338,6 +346,10 @@
         <li><a href="python2verilog.backend.verilog.html#module-python2verilog.backend.verilog.ast">python2verilog.backend.verilog.ast</a>
 </li>
         <li><a href="python2verilog.backend.verilog.html#module-python2verilog.backend.verilog.codegen">python2verilog.backend.verilog.codegen</a>
+</li>
+        <li><a href="python2verilog.extern.html#module-python2verilog.extern">python2verilog.extern</a>
+</li>
+        <li><a href="python2verilog.extern.html#module-python2verilog.extern.iverilog">python2verilog.extern.iverilog</a>
 </li>
         <li><a href="python2verilog.frontend.html#module-python2verilog.frontend">python2verilog.frontend</a>
 </li>
@@ -362,6 +374,8 @@
         <li><a href="python2verilog.utils.html#module-python2verilog.utils.assertions">python2verilog.utils.assertions</a>
 </li>
         <li><a href="python2verilog.utils.html#module-python2verilog.utils.decorator">python2verilog.utils.decorator</a>
+</li>
+        <li><a href="python2verilog.utils.html#module-python2verilog.utils.env_vars">python2verilog.utils.env_vars</a>
 </li>
         <li><a href="python2verilog.utils.html#module-python2verilog.utils.generics">python2verilog.utils.generics</a>
 </li>
@@ -394,7 +408,7 @@
 </li>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CaseBuilder.new_caseitem">new_caseitem() (CaseBuilder method)</a>
 </li>
-      <li><a href="python2verilog.api.html#python2verilog.api.api.new_namespace">new_namespace() (in module python2verilog.api.api)</a>
+      <li><a href="python2verilog.api.html#python2verilog.api.decorator.new_namespace">new_namespace() (in module python2verilog.api.decorator)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -440,7 +454,7 @@
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="python2verilog.api.html#python2verilog.api.api.parse_python">parse_python() (in module python2verilog.api.api)</a>
+      <li><a href="python2verilog.api.html#python2verilog.api.cli.parse_python">parse_python() (in module python2verilog.api.cli)</a>
 </li>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.PosedgeSyncAlways">PosedgeSyncAlways (class in python2verilog.backend.verilog.ast)</a>
 </li>
@@ -467,10 +481,17 @@
 </li>
       </ul></li>
       <li>
-    python2verilog.api.api
+    python2verilog.api.cli
 
       <ul>
-        <li><a href="python2verilog.api.html#module-python2verilog.api.api">module</a>
+        <li><a href="python2verilog.api.html#module-python2verilog.api.cli">module</a>
+</li>
+      </ul></li>
+      <li>
+    python2verilog.api.decorator
+
+      <ul>
+        <li><a href="python2verilog.api.html#module-python2verilog.api.decorator">module</a>
 </li>
       </ul></li>
       <li>
@@ -502,12 +523,28 @@
 </li>
       </ul></li>
       <li>
+    python2verilog.extern
+
+      <ul>
+        <li><a href="python2verilog.extern.html#module-python2verilog.extern">module</a>
+</li>
+      </ul></li>
+      <li>
+    python2verilog.extern.iverilog
+
+      <ul>
+        <li><a href="python2verilog.extern.html#module-python2verilog.extern.iverilog">module</a>
+</li>
+      </ul></li>
+      <li>
     python2verilog.frontend
 
       <ul>
         <li><a href="python2verilog.frontend.html#module-python2verilog.frontend">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     python2verilog.frontend.generator2ir
 
@@ -515,8 +552,6 @@
         <li><a href="python2verilog.frontend.html#module-python2verilog.frontend.generator2ir">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     python2verilog.ir
 
@@ -588,6 +623,13 @@
 </li>
       </ul></li>
       <li>
+    python2verilog.utils.env_vars
+
+      <ul>
+        <li><a href="python2verilog.utils.html#module-python2verilog.utils.env_vars">module</a>
+</li>
+      </ul></li>
+      <li>
     python2verilog.utils.generics
 
       <ul>
@@ -613,13 +655,21 @@
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.reset_signal">reset_signal (Context attribute)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python2verilog.frontend.html#python2verilog.frontend.generator2ir.Generator2Graph.results">results (Generator2Graph property)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.UBinOp.right">right (UBinOp property)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python2verilog.frontend.html#python2verilog.frontend.generator2ir.Generator2Graph.root">root (Generator2Graph property)</a>
+</li>
+      <li><a href="python2verilog.extern.html#python2verilog.extern.iverilog.run_cmd_with_fifos">run_cmd_with_fifos() (in module python2verilog.extern.iverilog)</a>
+</li>
+      <li><a href="python2verilog.extern.html#python2verilog.extern.iverilog.run_cmd_with_files">run_cmd_with_files() (in module python2verilog.extern.iverilog)</a>
+</li>
+      <li><a href="python2verilog.extern.html#python2verilog.extern.iverilog.run_iverilog_with_fifos">run_iverilog_with_fifos() (in module python2verilog.extern.iverilog)</a>
+</li>
+      <li><a href="python2verilog.extern.html#python2verilog.extern.iverilog.run_iverilog_with_files">run_iverilog_with_files() (in module python2verilog.extern.iverilog)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.AssignNode.rvalue">rvalue (AssignNode property)</a>
 </li>
@@ -629,6 +679,8 @@
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="python2verilog.utils.html#python2verilog.utils.env_vars.set_debug_mode">set_debug_mode() (in module python2verilog.utils.env_vars)</a>
+</li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.start_signal">start_signal (Context attribute)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.State">State (class in python2verilog.ir.expressions)</a>
@@ -755,11 +807,15 @@
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.statements.ValidSubsitution">ValidSubsitution (class in python2verilog.ir.statements)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.Var">Var (class in python2verilog.ir.expressions)</a>
 </li>
-      <li><a href="python2verilog.api.html#python2verilog.api.api.verilogify">verilogify() (in module python2verilog.api.api)</a>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="python2verilog.api.html#python2verilog.api.decorator.verilogify">verilogify() (in module python2verilog.api.decorator)</a>
+</li>
+      <li><a href="python2verilog.api.html#python2verilog.api.decorator.verilogify_function">verilogify_function() (in module python2verilog.api.decorator)</a>
+</li>
+      <li><a href="python2verilog.api.html#python2verilog.api.decorator.verilogify_namespace">verilogify_namespace() (in module python2verilog.api.decorator)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.Vertex">Vertex (class in python2verilog.ir.graph)</a>
 </li>
@@ -774,6 +830,8 @@
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.write">write (Context attribute)</a>
+</li>
+      <li><a href="python2verilog.extern.html#python2verilog.extern.iverilog.write_data_to_paths">write_data_to_paths() (in module python2verilog.extern.iverilog)</a>
 </li>
   </ul></td>
 </tr></table>
