--- a/_modules/index.html
+++ b/_modules/index.html
@@ -29,9 +29,11 @@
           <div class="body" role="main">
             
   <h1>All modules for which code is available</h1>
-<ul><li><a href="python2verilog/api/api.html">python2verilog.api.api</a></li>
+<ul><li><a href="python2verilog/api/cli.html">python2verilog.api.cli</a></li>
+<li><a href="python2verilog/api/decorator.html">python2verilog.api.decorator</a></li>
 <li><a href="python2verilog/backend/verilog/ast.html">python2verilog.backend.verilog.ast</a></li>
 <li><a href="python2verilog/backend/verilog/codegen.html">python2verilog.backend.verilog.codegen</a></li>
+<li><a href="python2verilog/extern/iverilog.html">python2verilog.extern.iverilog</a></li>
 <li><a href="python2verilog/frontend/generator2ir.html">python2verilog.frontend.generator2ir</a></li>
 <li><a href="python2verilog/ir/context.html">python2verilog.ir.context</a></li>
 <li><a href="python2verilog/ir/expressions.html">python2verilog.ir.expressions</a></li>
@@ -40,6 +42,7 @@
 <li><a href="python2verilog/optimizer/optimizer.html">python2verilog.optimizer.optimizer</a></li>
 <li><a href="python2verilog/utils/assertions.html">python2verilog.utils.assertions</a></li>
 <li><a href="python2verilog/utils/decorator.html">python2verilog.utils.decorator</a></li>
+<li><a href="python2verilog/utils/env_vars.html">python2verilog.utils.env_vars</a></li>
 <li><a href="python2verilog/utils/generics.html">python2verilog.utils.generics</a></li>
 <li><a href="python2verilog/utils/string.html">python2verilog.utils.string</a></li>
 </ul>
