--- a/_modules/python2verilog/backend/verilog/codegen.html
+++ b/_modules/python2verilog/backend/verilog/codegen.html
@@ -217,7 +217,7 @@
 
 <div class="viewcode-block" id="CodeGen.new_testbench">
 <a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.new_testbench">[docs]</a>
-    <span class="k">def</span> <span class="nf">new_testbench</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">test_cases</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">tuple</span><span class="p">[</span><span class="nb">str</span><span class="p">]]):</span>
+    <span class="k">def</span> <span class="nf">new_testbench</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">test_cases</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">tuple</span><span class="p">]):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Creates testbench with multiple test cases</span>
 
@@ -336,7 +336,7 @@
 
 <div class="viewcode-block" id="CodeGen.new_testbench_lines">
 <a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.new_testbench_lines">[docs]</a>
-    <span class="k">def</span> <span class="nf">new_testbench_lines</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">test_cases</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">tuple</span><span class="p">[</span><span class="nb">str</span><span class="p">]]):</span>
+    <span class="k">def</span> <span class="nf">new_testbench_lines</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">test_cases</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">tuple</span><span class="p">]):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        New Testbench as lines</span>
 <span class="sd">        &quot;&quot;&quot;</span>
@@ -345,7 +345,7 @@
 
 <div class="viewcode-block" id="CodeGen.new_testbench_str">
 <a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.new_testbench_str">[docs]</a>
-    <span class="k">def</span> <span class="nf">new_testbench_str</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">test_cases</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">tuple</span><span class="p">[</span><span class="nb">str</span><span class="p">]]):</span>
+    <span class="k">def</span> <span class="nf">new_testbench_str</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">test_cases</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">tuple</span><span class="p">]):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        New testbench as str</span>
 <span class="sd">        &quot;&quot;&quot;</span>
