--- a/_modules/python2verilog/ir/context.html
+++ b/_modules/python2verilog/ir/context.html
@@ -35,6 +35,7 @@
 <span class="kn">import</span> <span class="nn">copy</span>
 <span class="kn">from</span> <span class="nn">dataclasses</span> <span class="kn">import</span> <span class="n">dataclass</span><span class="p">,</span> <span class="n">field</span>
 <span class="kn">import</span> <span class="nn">io</span>
+<span class="kn">import</span> <span class="nn">os</span>
 <span class="kn">from</span> <span class="nn">types</span> <span class="kn">import</span> <span class="n">FunctionType</span>
 <span class="kn">from</span> <span class="nn">typing</span> <span class="kn">import</span> <span class="n">Optional</span><span class="p">,</span> <span class="n">IO</span>
 <span class="kn">import</span> <span class="nn">warnings</span>
@@ -55,7 +56,7 @@
 
     <span class="c1"># pylint: disable=too-many-instance-attributes</span>
     <span class="n">name</span><span class="p">:</span> <span class="nb">str</span> <span class="o">=</span> <span class="s2">&quot;&quot;</span>
-    <span class="n">test_cases</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span> <span class="o">|</span> <span class="nb">list</span><span class="p">]</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">default_factory</span><span class="o">=</span><span class="nb">list</span><span class="p">)</span>
+    <span class="n">test_cases</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">tuple</span><span class="p">]</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">default_factory</span><span class="o">=</span><span class="nb">list</span><span class="p">)</span>
 
     <span class="n">py_func</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="n">FunctionType</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span>
     <span class="n">py_ast</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="n">ast</span><span class="o">.</span><span class="n">FunctionDef</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span>
@@ -91,10 +92,11 @@
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Makes sure all important bits are filled before python is parsed</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="k">assert</span> <span class="bp">self</span><span class="o">.</span><span class="n">input_types</span>
-        <span class="k">assert</span> <span class="bp">self</span><span class="o">.</span><span class="n">input_vars</span>
-        <span class="k">assert</span> <span class="bp">self</span><span class="o">.</span><span class="n">output_types</span>
-        <span class="k">assert</span> <span class="bp">self</span><span class="o">.</span><span class="n">output_vars</span></div>
+        <span class="k">if</span> <span class="n">os</span><span class="o">.</span><span class="n">environ</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s2">&quot;PYTHON_2_VERILOG_DEBUG&quot;</span><span class="p">,</span> <span class="kc">None</span><span class="p">):</span>
+            <span class="k">assert</span> <span class="bp">self</span><span class="o">.</span><span class="n">input_types</span>
+            <span class="k">assert</span> <span class="bp">self</span><span class="o">.</span><span class="n">input_vars</span>
+            <span class="k">assert</span> <span class="bp">self</span><span class="o">.</span><span class="n">output_types</span>
+            <span class="k">assert</span> <span class="bp">self</span><span class="o">.</span><span class="n">output_vars</span></div>
 
 
     <span class="nd">@property</span>
